--- a/timetable/accounts/templates/accounts/login.html
+++ b/timetable/accounts/templates/accounts/login.html
@@ -11,7 +11,15 @@
 {% endblock css %}
 {% block body %}
 <div class="container mt-5">
-    <div class="shadow-lg p-3 w-25 mb-5 bg-white main">
+{% for message in messages %}
+    <div class="alert alert-{{ message.tags }} alert-dismissible fade show" role="alert">
+    {{ message }}
+    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+      <span aria-hidden="true">&times;</span>
+    </button>
+    </div>
+{% endfor %}
+    <div class="shadow-lg p-3 w-25 mb-5 bg-white main border">
         <div class="card border-0">
             <form method="post" action="{% url 'accounts:login' %}">
                 {% csrf_token %}
@@ -26,9 +34,9 @@
                     <label class="form-check-label" for="remember">Remember me</label>
                     <input type="checkbox" class="form-check-input" id="remember">
                 </div>
-                <button type="submit" class="btn btn-success">Sign in</button>
+                <button type="submit" class="btn btn-secondary">Sign in</button><hr>
                 <input type="hidden" name="next" value="{{ next }}">
-                <div class="text-right mt-3">
+                <div class="text-right">
                     <a href="{% url 'accounts:register' %}" class="text-info">Register here</a>
                 </div>
             </form>
