--- a/timetable/app/templates/app/base.html
+++ b/timetable/app/templates/app/base.html
@@ -16,7 +16,7 @@
   <body style="background-color: #c9c9c9;">
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <div class="container">
-        <a class="navbar-brand" href="#">TimeTable</a>
+        <a class="navbar-brand" href="/">TimeTable</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
