--- a/timetable/app/templates/app/update.html
+++ b/timetable/app/templates/app/update.html
@@ -5,7 +5,7 @@
     <div class="table-responsive">
         <table class="table text-center table-striped table-bordered border-secondary">
             <tr>
-                <th >Time</th>
+                <th>Time</th>
                 <th>MONDAY</th>
                 <th>TUESDAY</th>
                 <th>WEDNESDAY</th>
@@ -17,20 +17,19 @@
             </tr>
             {% for tb in tb %}
             <tr>
-                <td>{{ tb.time }}</td>
-                <td>{{ tb.monday }}</td>
-                <td>{{ tb.tuesday }}</td>
-                <td>{{ tb.wednesday }}</td>
-                <td>{{ tb.thursday }}</td>
-                <td>{{ tb.friday }}</td>
-                <td>{{ tb.saturday }}</td>
-                <td>{{ tb.sunday }}</td>
+                <th>{{ tb.time }}</th>
+                <td style="color:red;">{{ tb.monday }}</td>
+                <td style="color:green;">{{ tb.tuesday }}</td>
+                <td style="color:blue;">{{ tb.wednesday }}</td>
+                <td style="color:#cf7515;">{{ tb.thursday }}</td>
+                <td style="color:#1c1c1b;">{{ tb.friday }}</td>
+                <td style="color:#cf15aa;">{{ tb.saturday }}</td>
+                <td style="color:#360f99;">{{ tb.sunday }}</td>
                 <td><a class="btn btn-secondary" href="{% url 'app:update' tb.id %}">Edit</a></td>
             </tr>
             {% endfor %}
         </table>
     </div>
-    <br>
     <br>
     <a class="btn btn-secondary" href="{% url 'app:add' %}">Add Row</a>
 </div>
