--- a/timetable/app/templates/app/home.html
+++ b/timetable/app/templates/app/home.html
@@ -38,7 +38,6 @@
     </div>
     <br>
     <br>
-    <a class="btn btn-secondary" href="{% url 'app:update_tb' %}">Update Value</a>
-    <a class="btn btn-secondary" href="{% url 'app:add' %}">Add Row</a>
+    <a class="btn btn-secondary" href="{% url 'app:update_tb' %}">Update Table</a>
 </div>
 {% endblock body %}
