--- a/timetable/app/templates/app/home.html
+++ b/timetable/app/templates/app/home.html
@@ -1,4 +1,5 @@
 {% extends 'app/base.html' %}
+{% block title %} Time Table{% endblock title %}
 {% block body %}
 <div class="container mt-5">
 {% for message in messages %}
