--- a/timetable/app/templates/app/add.html
+++ b/timetable/app/templates/app/add.html
@@ -1,4 +1,5 @@
 {% extends 'app/base.html' %}
+{% block title %} Add Row{% endblock title %}
 {%  load crispy_forms_tags %}
 {% block css %}
 .main{
@@ -23,6 +24,7 @@
                 {% endfor %}
                 <br>
                 <button type="submit" class="btn btn-secondary">Add Row</button>
+                <a href="{% url 'app:update_tb' %}" class="btn btn-danger mx-3">Cancel</a></p>
             </form>
         </div>
     </div>
