--- a/timetable/app/templates/app/update.html
+++ b/timetable/app/templates/app/update.html
@@ -1,5 +1,5 @@
 {% extends 'app/base.html' %}
-{% block title %} Update{% endblock title %}
+{% block title %} Update Time Table{% endblock title %}
 {% block body %}
 <div class="container mt-5">
 <H1 class="mb-4"><FONT COLOR="DARKCYAN"><CENTER>COLLEGE TIME TABLE</CENTER></FONT></H1>
